static file for index view

--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,38 +1,26 @@
-<header>
-    <h1>Chat</h1>
-    <p>Chat with your friends</p>
-    <div class="chat">
-        <div class="chat__messages">
-            <div class="chat__message">
-                <div class="chat__message__avatar">
-                    <img src="https://via.placeholder.com/50" alt="Avatar">
+{% load static %}
+<head>
+    <title>LogAnaliser</title>
+    <link rel="stylesheet" href="{% static 'chat/styles.css' %}">
+</head>
+
+<body>
+    <header>
+        <h1>Log Analiser | Chat</h1>
+    </header>
+    <main>
+        {% comment %} <div id="chat-log">
+            {% for message in messages %}
+                <div class="message">
+                    <span class="timestamp">{{ message.timestamp }}</span>
+                    <span class="username">{{ message.username }}</span>
+                    <span class="content">{{ message.content }}</span>
                 </div>
-                <div class="chat__message__content">
-                    <p>Hey, how are you?</p>
-                </div>
-            </div>
-            <div class="chat__message">
-                <div class="chat__message__avatar">
-                    <img src="https://via.placeholder.com/50" alt="Avatar">
-                </div>
-                <div class="chat__message__content">
-                    <p>Hey, how are you?</p>
-                </div>
-            </div>
-            <div class="chat__message">
-                <div class="chat__message__avatar">
-                    <img src="https://via.placeholder.com/50" alt="Avatar">
-                </div>
-                <div class="chat__message__content">
-                    <p>Hey, how are you?</p>
-                </div>
-            </div>
-            <div class="chat__message">
-                <div class="chat__message__avatar">
-                    <img src="https://via.placeholder.com/50" alt="Avatar">
-                </div>
-                <div class="chat__message__content">
-                    <p>Hey, how are you?</p>
-                </div>
-            </div>
-</header>
+            {% endfor %}
+        </div> {% endcomment %}
+        <form id="chat-form" method="post">
+            {% csrf_token %}
+            <input type="text" id="chat-message-input" name="message" placeholder="Type your message here...">
+            <button type="submit">Send</button>
+        </form> 
+</body>
