Uplaod de arquivos pronto

--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,38 +1,24 @@
-<header>
-    <h1>Chat</h1>
-    <p>Chat with your friends</p>
-    <div class="chat">
-        <div class="chat__messages">
-            <div class="chat__message">
-                <div class="chat__message__avatar">
-                    <img src="https://via.placeholder.com/50" alt="Avatar">
-                </div>
-                <div class="chat__message__content">
-                    <p>Hey, how are you?</p>
-                </div>
-            </div>
-            <div class="chat__message">
-                <div class="chat__message__avatar">
-                    <img src="https://via.placeholder.com/50" alt="Avatar">
-                </div>
-                <div class="chat__message__content">
-                    <p>Hey, how are you?</p>
-                </div>
-            </div>
-            <div class="chat__message">
-                <div class="chat__message__avatar">
-                    <img src="https://via.placeholder.com/50" alt="Avatar">
-                </div>
-                <div class="chat__message__content">
-                    <p>Hey, how are you?</p>
-                </div>
-            </div>
-            <div class="chat__message">
-                <div class="chat__message__avatar">
-                    <img src="https://via.placeholder.com/50" alt="Avatar">
-                </div>
-                <div class="chat__message__content">
-                    <p>Hey, how are you?</p>
-                </div>
-            </div>
-</header>
+<!DOCTYPE html>
+<html lang="pt-BR">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <header>
+      <h1>Chat</h1>
+      <p>Chat with your friends</p>
+      <div class="chat">
+        <div class="chat__message">
+          <div class="chat__message__avatar">
+            <img src="https://via.placeholder.com/50" alt="Avatar" />
+          </div>
+          <div class="chat__message__content">
+            <p>{{ chat_response }}</p>
+          </div>
+        </div>
+      </div>
+    </header>
+  </body>
+</html>
