--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,26 +1,27 @@
 {% load static %}
 <head>
-    <title>LogAnaliser</title>
-    <link rel="stylesheet" href="{% static 'chat/styles.css' %}">
+  <title>LogAnaliser</title>
+  <link rel="stylesheet" href="{% static 'chat/styles.css' %}" />
 </head>
 
 <body>
-    <header>
-        <h1>Log Analiser | Chat</h1>
-    </header>
-    <main>
-        {% comment %} <div id="chat-log">
-            {% for message in messages %}
-                <div class="message">
-                    <span class="timestamp">{{ message.timestamp }}</span>
-                    <span class="username">{{ message.username }}</span>
-                    <span class="content">{{ message.content }}</span>
-                </div>
-            {% endfor %}
-        </div> {% endcomment %}
-        <form id="chat-form" method="post">
-            {% csrf_token %}
-            <input type="text" id="chat-message-input" name="message" placeholder="Type your message here...">
-            <button type="submit">Send</button>
-        </form> 
+  <header>
+    <h1>Log Analiser | Chat</h1>
+  </header>
+  <main>
+    {% comment %} <div id="chat-log">
+      {% for message in messages %}
+        <div class="message">
+          <span class="timestamp">{{ message.timestamp }}</span>
+          <span class="username">{{ message.username }}</span>
+          <span class="content">{{ message.content }}</span>
+        </div>
+      {% endfor %}
+    </div> {% endcomment %}
+    <form id="chat-form" method="post">
+      {% csrf_token %}
+      <input type="text" id="chat-message-input" name="message" placeholder="Type your message here..." />
+      <button type="submit">Send</button>
+    </form>
+  </main>
 </body>
