--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -2,6 +2,9 @@
 <head>
   <title>LogAnaliser</title>
   <link rel="stylesheet" href="{% static 'chat/styles.css' %}" />
+  <link rel="icon" type="image/png" sizes="16x16"  href="imgs/favicon-16x16.png">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
