--- a/chat/templates/chat/form.html
+++ b/chat/templates/chat/form.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Log uploader</title>
+    <link rel="icon" type="image/png" sizes="16x16"  href="imgs/favicon-16x16.png">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
   </head>
   <body>
     <h1>Teste</h1>
