--- a/chat/templates/chat/form.html
+++ b/chat/templates/chat/form.html
@@ -14,12 +14,12 @@
     <h1>Log analizer</h1>
     <form action="{% url 'index' %}" method="post" enctype="multipart/form-data" id="logform" name="logform">
       {% csrf_token %}
-      <!-- Se o campo file não estiver no form.as_p, adicione-o: -->
-      <input type="file" id="logforminput" name="arquivo" style="display: none;" />
+      
+      <input type="file" id="logforminput" name="arquivo" />
       <label for="logforminput" class="labellogform">+ Upload</label>
-      <!-- Outros campos do formulário -->
+      
       {{ form.as_p }}
-      <input type="submit" value="Upload Log" />
+      <input type="submit" value="Upload Log" id="submit"/>
     </form>
   </body>
 </html>
