--- a/chat/templates/chat/form.html
+++ b/chat/templates/chat/form.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="{% static 'chat/styles.css' %}" />
     <title>Log uploader</title>
-    <link rel="icon" type="image/png" sizes="16x16"  href={% static 'chat/favicon-16x16.png' %}>
+    {% comment %} <link rel="icon" type="image/png" sizes="16x16"  href={% static 'chat/favicon-16x16.png' %}> {% endcomment %}
     <meta name="msapplication-TileColor" content="#ffffff">
     <meta name="theme-color" content="#ffffff">
   </head>
@@ -15,8 +15,8 @@
     <form action="{% url 'index' %}" method="post" enctype="multipart/form-data" id="logform" name="logform">
       {% csrf_token %}
       
-      <input type="file" id="logforminput" name="arquivo" />
-      <label for="logforminput" class="labellogform">+ Upload</label>
+      {% comment %} <input type="file" id="logforminput" name="arquivo" /> {% endcomment %}
+      {% comment %} <label for="logforminput" class="labellogform">+ Upload</label> {% endcomment %}
       
       {{ form.as_p }}
       <input type="submit" value="Upload Log" id="submit"/>
