--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -2,7 +2,7 @@
 <head>
   <title>LogAnaliser</title>
   <link rel="stylesheet" href="{% static 'chat/styles.css' %}" />
-  {% comment %} <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16x16.png" /> {% endcomment %}
+  <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16x16.png" />
   <meta name="msapplication-TileColor" content="#ffffff" />
   <meta name="theme-color" content="#ffffff" />
 </head>
