--- a/chat/static/chat/styles.css
+++ b/chat/static/chat/styles.css
@@ -67,3 +67,42 @@ h1 {
     margin: auto;
     margin-top: 30px;
 }
+
+.response {
+    width: 80%;
+    margin: auto;
+}
+
+.response h2 {
+    font-size: 3rem;
+    margin-block: 20px;
+}
+
+.response h3 {
+    font-size: 2.5rem;
+    margin-block: 10px;
+}
+
+.response p {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+.response a {
+    color: #249ed6;
+    text-decoration: none;
+}
+
+.response a:hover {
+    text-decoration: underline;
+}
+
+.response {
+    background-color: #333;
+    border: 1px solid #249ed6;
+    border-radius: 10px;
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    max-width: 600px;
+    word-wrap: break-word;
+}
