--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -10,7 +10,11 @@
 <body>
   <header>
     <h1>Log Analiser | Chat</h1>
-    {{ ai_response|safe }}
-    <a href="{% url 'index' %}">Reenviar outro log</a>
   </header>
+  <section>
+    <div class="response">
+      {{ ai_response|safe }}
+    </div>
+    <a href="{% url 'index' %}">Reenviar outro log</a>
+  </section>
 </body>
