--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,5 +1,8 @@
 {% load static %}
+<html lang="pt-br">
 <head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>LogAnaliser</title>
   <link rel="stylesheet" href="{% static 'chat/styles.css' %}" />
   <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16x16.png" />
@@ -18,3 +21,4 @@
     <a href="{% url 'index' %}">Reenviar outro log</a>
   </section>
 </body>
+</html>
