--- a/chat/static/chat/styles.css
+++ b/chat/static/chat/styles.css
@@ -79,12 +79,12 @@ h1 {
 }
 
 .response h3 {
-    font-size: 2.5rem;
+    font-size: 2rem;
     margin-block: 10px;
 }
 
 .response p {
-    font-size: 1.5rem;
+    font-size: 1rem;
     margin-bottom: 10px;
 }
 
@@ -103,6 +103,9 @@ h1 {
     border-radius: 10px;
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-    max-width: 600px;
+    max-width: 900px;
+    max-height: 900px;
     word-wrap: break-word;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
