--- a/chat/templates/chat/index.html
+++ b/chat/templates/chat/index.html
@@ -1,24 +1,25 @@
+<!DOCTYPE html>
 {% load static %}
 <html lang="pt-br">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>LogAnaliser</title>
-  <link rel="stylesheet" href="{% static 'chat/styles.css' %}" />
-  <link rel="icon" type="image/png" sizes="16x16" href="imgs/favicon-16x16.png" />
-  <meta name="msapplication-TileColor" content="#ffffff" />
-  <meta name="theme-color" content="#ffffff" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>LogAnaliser</title>
+    <link rel="stylesheet" href="{% static 'chat/styles.css' %}" />
+    <link rel="icon" type="image/png" sizes="16x16"  href={% static 'chat/favicon-16x16.png' %}>
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta name="theme-color" content="#ffffff" />
+  </head>
 
-<body>
-  <header>
-    <h1>Log Analiser | Chat</h1>
-  </header>
-  <section>
-    <div class="response">
-      {{ ai_response|safe }}
-    </div>
-    <a href="{% url 'index' %}">Reenviar outro log</a>
-  </section>
-</body>
+  <body>
+    <header>
+      <h1>Log Analiser</h1>
+    </header>
+    <section>
+      <div class="response">
+        {{ ai_response|safe }}
+      </div>
+      <a href="{% url 'index' %}">Reenviar outro log</a>
+    </section>
+  </body>
 </html>
