--- a/chat/static/chat/styles.css
+++ b/chat/static/chat/styles.css
@@ -4,68 +4,123 @@
     box-sizing: border-box;
     line-height: 1.5;
 }
-
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #242424;
+    background-color: #2c2c2c;
     color: #fff;
     height: 100vh;
+}
+header {
+    border-top: 9px solid #545454;
+    background: linear-gradient(to top right, #00523b 0%, #11b688 100%);
+    height: 100px;
+    width: 100%;
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
+}
+.logo {
+    margin-left: 10%;
+    display: flex;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
 }
-
-h1 {
-    font-size: 4rem;
-    margin-bottom: 5rem;
+.logo img {
+    height: 70px;
+    border-radius: 5px;
 }
+.logo h1 {
+    font-size: 45px;
+    margin-left: 20px;
+}
+header nav {
+    margin-right: 10%;
+    width: 300px;
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+}
+header nav a {
+    color: #fff;
+    text-decoration: none;
+    font-size: 23px;
+    
+    &:hover {
+        text-decoration: underline;
+    }
+}
+.container {
+    width: 100%;
+    height: 1vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.box {
+    margin-top: 500px;
 
+    width: 460px;
+    padding: 22px;
+    border-radius: 32px;
+    height: auto;
+    backdrop-filter: blur(4px);
+    -webkit-backdrop-filter: blur(4px);
+    background: rgba(182, 182, 182, 0.20);
+    border: 1px solid rgba(186, 186, 186, 0.14);
+    box-shadow: 0 6px 50px rgba(0, 0, 0, 0.25);
+}
 #logforminput {
     display: none;
 }
-
 .labellogform {
-    border: 1px solid rgb(25, 152, 190);
-    outline: 1px solid rgb(30, 167, 209);
-    box-shadow: 0 0 10px rgba(30, 167, 209, 0.8);
-    border-radius: 8px;
+    border: 1px solid rgba(25, 152, 190, 0.5);
+    outline: 1px solid rgba(30, 167, 209, 0.45);
+    box-shadow: 0 0 10px rgba(30, 167, 209, 0.5);
+    border-radius: 20px;
     display: block;
-    padding: 30px 50px;
+    padding: 20px 35px;
     cursor: pointer;
-    background-color: #0f4b6910;
-    color: #249ed6;
-    font-size: 1.5rem;
+    background-color: rgba(51, 121, 148, 0.4);
+    color: #ffffff;
+    text-align: center;
+    font-size: 32px;
     font-weight: bolder;
+
 }
 
 .labellogform:hover {
-    background-color: #1a7daf25;
+    background-color: rgba(51, 121, 148, 0.9);
 }
 
 .files {
     height: auto;
     width: 100%;
     margin-top: 10px;
-    border: 1px solid #249ed6;
-    border-radius: 8px;
+    border-radius: 10px;
     display: inline-block;
     padding: 10px;
+    background-color: #ffffff38;
 }
 
 #submit {
-    border: 1px solid rgb(25, 152, 190);
-    outline: 1px solid rgb(30, 167, 209);
-    border-radius: 8px;
+    border: 1px solid rgba(25, 152, 190, 0.6);
+    outline: 1px solid rgba(30, 167, 209, 0.6);
+    border-radius: 1rem;
     display: block;
-    padding: 10px 20px;
+    padding: 10px 38px;
     cursor: pointer;
-    background-color: rgb(25, 152, 190);
+    background-color: rgba(51, 121, 148, 0.7);
     color: white;
-    font-size: 1rem;
+    font-size: 26px;
     font-weight: bolder;
     margin: auto;
     margin-top: 30px;
+    transition: transform 0.5s;
+}
+#submit:hover {
+    box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.5);
+    transform: scale(1.1);
+    background-color: rgb(51, 121, 148);
 }
 
 .response {
@@ -105,4 +160,49 @@ h1 {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     max-width: 600px;
     word-wrap: break-word;
+}
+footer {
+    background: linear-gradient(to bottom left, #004d40 0%, #007663 100%);
+    width: 100%;
+    height: 165px;
+    margin-top: 638px;
+    display: flex;
+    justify-content: space-between;
+}
+.git {
+    margin-left: 15%;
+    display: flex;
+    flex-direction: column;
+}
+.gitparagraf {
+    display: flex;
+    flex-direction: row;
+    font-size: 24px;
+}
+.gitparagraf a {
+    color: #fff;
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
+}
+.devs {
+    margin-right: 15%;
+    display: flex;
+    flex-direction: column;
+}
+h2 {
+    margin-top: 8px;
+    margin-bottom: 10px;
+}
+.devs a {
+    font-size: 20px;
+    padding: 1px;
+    color: #fff;
+    text-decoration: none;
+
+    &:hover {
+        text-decoration: underline;
+    }
 }
