--- a/chat/templates/chat/form.html
+++ b/chat/templates/chat/form.html
@@ -32,7 +32,7 @@
             <div class="box">
               <input type="file" id="logforminput" name="arquivo" />
               <label for="logforminput" class="labellogform"><i class="fa-solid fa-upload"></i> Carregar arquivo</label>
-              <div class="files"></div>
+              <div class="files"> ‎ </div>
             </div>
             <input type="submit" value="Analizar" id="submit"/>
           </form>
