--- a/chat/templates/chat/form.html
+++ b/chat/templates/chat/form.html
@@ -15,7 +15,7 @@
     <!-- Cabeçalho-->
     <header>
       <div class="logo">
-        <img src="../../static/chat/logo.png" alt="Logo">
+        <img src="{% static 'chat/logo.png' %}" alt="Logo">
         <h1>LogAnalizer</h1>
       </div>
       <!-- Barra de navegação -->
