--- a/chat/static/chat/styles.css
+++ b/chat/static/chat/styles.css
@@ -7,8 +7,8 @@
 
 body {
   font-family: "Arial", sans-serif;
-  background-color: #1a1a1a; /* Fundo mais escuro, como na imagem */
-  color: #fff;
+  background-color: #fff; /* Fundo mais escuro, como na imagem */
+  color: black;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -39,6 +39,7 @@ header {
 .logo h1 {
   font-size: 2rem; /* Tamanho ajustado para ser mais próximo da imagem */
   margin-left: 15px;
+  color: #fff;
 }
 
 header nav {
@@ -91,7 +92,7 @@ header nav a:hover {
   border-radius: 10px;
   margin: 0;
   padding: 1.5rem;
-  background-color: #333; /* Fundo cinza escuro como na imagem */
+  background-color: #c2c2c2; /* Fundo cinza escuro como na imagem */
 }
 
 .response {
@@ -110,7 +111,7 @@ header nav a:hover {
 .response h2 {
   font-size: 1.8rem; /* Tamanho ajustado para o título */
   margin-block: 1rem;
-  color: #fff;
+  color: black;
 }
 
 .response h3 {
@@ -192,7 +193,7 @@ h2 {
 .devs a {
   font-size: 1.1rem;
   padding: 2px 0;
-  color: #fff;
+  color: black;
   text-decoration: none;
 }
 
@@ -214,7 +215,7 @@ h2 {
   padding: 20px 35px;
   cursor: pointer;
   background-color: rgba(51, 121, 148, 0.4);
-  color: #ffffff;
+  color: black;
   text-align: center;
   font-size: 32px;
   font-weight: bolder;
@@ -225,6 +226,7 @@ h2 {
   transform: scale(1.05);
   box-shadow: 1px 2px 10px rgba(0, 0, 0, 0.5);
   background-color: rgba(51, 121, 148, 0.9);
+  color: white;
 }
 
 /* Removido o section a, pois já é coberto pelo #submit */
@@ -267,14 +269,17 @@ h2 {
 
   .response h2 {
     font-size: 1.5rem;
+    color: black;
   }
 
   .response h3 {
     font-size: 1.2rem;
+    color: black;
   }
 
   .response p {
     font-size: 0.9rem;
+    color: black;
   }
 
   #submit {
