--- a/chat/static/chat/styles.css
+++ b/chat/static/chat/styles.css
@@ -1,4 +1,5 @@
 * {
+  color: black;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -117,13 +118,13 @@ header nav a:hover {
 .response h3 {
   font-size: 1.4rem;
   margin-block: 0.8rem;
-  color: #ddd;
+  color: black;
 }
 
 .response p {
   font-size: 1rem;
   margin-bottom: 0.8rem;
-  color: #ccc; /* Texto um pouco mais claro para contraste */
+  color: black; /* Texto um pouco mais claro para contraste */
 }
 
 #submit {
